<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.example.myapplication.Achievement">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#E3E2E2">
        <ImageView
                android:id="@+id/backArrow"
                android:layout_width="50dp"
                android:foregroundGravity="center"
                android:layout_height="40dp"
                android:src="@drawable/back_arrow">
        </ImageView>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/achievements"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold">
        </TextView>
    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="50dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/mainAchievement"
                    android:background="@color/bottom_navigation"
                    android:src="@drawable/threek">
            </ImageView>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/LEVEL"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold">
                </TextView>

                <TextView
                        android:id="@+id/lvlText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold">

                </TextView>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/stepsUntilNextLvl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="3000"
                        android:textSize="20sp">

                </TextView>
                <Space
                        android:layout_width="4dp"
                        android:layout_height="4dp">
                </Space>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_steps_to_reach_next_level"
                        android:textSize="20sp">
                </TextView>

            </LinearLayout>

            <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="333dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="400dp"
            app:cardElevation="50dp"
            app:cardCornerRadius="25dp"
            android:id="@+id/more">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/levels">
                </TextView>

                <TextView
                        android:layout_width="84dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="145dp"
                        android:text="@string/more"
                        android:gravity="center_horizontal"
                        android:textColor="#787676"
                        android:textSize="20sp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <ImageView
                            android:layout_width="70dp"
                            android:layout_marginStart="10dp"
                            android:layout_height="80dp"
                            android:id="@+id/three"
                            android:src="@drawable/threek"
                            android:background="@color/bottom_navigation">

                    </ImageView>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/level_2"
                            android:layout_marginStart="15dp"
                            android:textSize="20dp">
                    </TextView>

                </LinearLayout>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <ImageView
                            android:layout_width="70dp"
                            android:layout_marginStart="10dp"
                            android:layout_height="80dp"
                            android:id="@+id/seven"
                            android:src="@drawable/sevenk"
                            android:background="@color/bottom_navigation">

                    </ImageView>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/level_3"
                            android:layout_marginStart="15dp"
                            android:textSize="20sp">
                    </TextView>

                </LinearLayout>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <ImageView
                            android:layout_width="70dp"
                            android:layout_marginStart="10dp"
                            android:layout_height="80dp"
                            android:id="@+id/ten"
                            android:src="@drawable/tenk"
                            android:background="@color/bottom_navigation">
                    </ImageView>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/level_4"
                            android:layout_marginStart="15dp"
                            android:textSize="20sp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <ImageView
                            android:layout_width="70dp"
                            android:layout_marginStart="10dp"
                            android:layout_height="80dp"
                            android:id="@+id/fourteen"
                            android:src="@drawable/fourteenk"
                            android:background="@color/bottom_navigation">
                    </ImageView>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/level_5"
                            android:layout_marginStart="15dp"
                            android:textSize="20sp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>